[gd_scene load_steps=14 format=3 uid="uid://d0hwat12i2kka"]

[ext_resource type="Script" path="res://enemies/dead_cultist/dead_cultist.gd" id="1_fycvj"]
[ext_resource type="Texture2D" uid="uid://csb8ya7so37jv" path="res://enemies/dead_cultist/cultist.png" id="2_tj06d"]
[ext_resource type="PackedScene" uid="uid://cqtt8alj5aqm1" path="res://characters/hitbox.tscn" id="3_r8rsg"]
[ext_resource type="PackedScene" uid="uid://olyv8q2cl8v7" path="res://characters/hurtbox.tscn" id="4_51765"]

[sub_resource type="CircleShape2D" id="CircleShape2D_3o2sy"]
radius = 13.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fyql6"]
size = Vector2(16, 2)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uj0lm"]
size = Vector2(30, 49)

[sub_resource type="Animation" id="Animation_faexn"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("flip_helper/hit_box/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("sprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}

[sub_resource type="Animation" id="Animation_3oc7f"]
resource_name = "attack"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("flip_helper/hit_box/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.433333, 0.833333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("sprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 1, 0.0797672, 1)]
}

[sub_resource type="Animation" id="Animation_c6bl8"]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_tylt6"]
resource_name = "run"
length = 0.500004
loop_mode = 1
step = 0.0416667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [4, 5, 6, 5]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_23u6s"]
_data = {
"RESET": SubResource("Animation_faexn"),
"attack": SubResource("Animation_3oc7f"),
"idle": SubResource("Animation_c6bl8"),
"run": SubResource("Animation_tylt6")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fgpfr"]
size = Vector2(16, 46)

[node name="dead_cultist" type="CharacterBody2D"]
collision_layer = 8
script = ExtResource("1_fycvj")

[node name="sprite" type="Sprite2D" parent="."]
position = Vector2(8.9407e-08, -24)
texture = ExtResource("2_tj06d")
hframes = 4
vframes = 2
frame = 4

[node name="flip_helper" type="Node2D" parent="."]

[node name="hit_box" parent="flip_helper" instance=ExtResource("3_r8rsg")]
position = Vector2(19, -27)
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="flip_helper/hit_box"]
shape = SubResource("CircleShape2D_3o2sy")
disabled = true

[node name="collision_shape_2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(-1, -1)
shape = SubResource("RectangleShape2D_fyql6")

[node name="ground_cast" type="RayCast2D" parent="."]
visible = false
position = Vector2(-8, -13)
target_position = Vector2(0, 18)

[node name="idle_timer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="boid_area" type="Area2D" parent="."]
visible = false
position = Vector2(0, -8)
collision_layer = 0
collision_mask = 8

[node name="collision_shape_2D" type="CollisionShape2D" parent="boid_area"]
position = Vector2(-1, -16.5)
shape = SubResource("RectangleShape2D_uj0lm")

[node name="animation_player" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_23u6s")
}

[node name="hurt_box" parent="." instance=ExtResource("4_51765")]
collision_layer = 16

[node name="collision_shape_2D" type="CollisionShape2D" parent="hurt_box"]
position = Vector2(-1, -23)
shape = SubResource("RectangleShape2D_fgpfr")

[connection signal="timeout" from="idle_timer" to="." method="_on_idle_timer_timeout"]
[connection signal="animation_finished" from="animation_player" to="." method="_on_animation_player_animation_finished"]
[connection signal="hurt" from="hurt_box" to="." method="_on_hurt_box_hurt"]
